// Copyright 2018 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

#ifndef OOBE_CONFIG_OOBE_CONFIG_H_
#define OOBE_CONFIG_OOBE_CONFIG_H_

#include <string>

namespace oobe_config {

// TODO(zentaro): Stub method. Remove with first real commit.
std::string Hello();

}  // namespace oobe_config

#endif  // OOBE_CONFIG_OOBE_CONFIG_H_
